--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       ];
 
       const sendToOpenAI = async (prompt, userText) => {
-        const res = await fetch('chat', {
+        const res = await fetch('api/chat', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ prompt, userText })
