--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
   <div class="question">?</div>
 
   <div class="card">
-    <div class="icon-circle">▶️</div>
-    <div class="text-content">
-      <strong>להמשיך לצפות בקורס</strong><br>
-      המשיכי בדיוק מהנקודה שהפסקת. שיעורים קצרים, הסברים בגובה העיניים, ודוגמאות מהחיים ומהשטח.
-    </div>
+  <div class="icon-circle">▶️</div>
+  <div class="text-content">
+    <strong>
+      <a href="index2.html" style="color: inherit; text-decoration: none;">
+        להמשיך לצפות בקורס
+      </a>
+    </strong><br>
+    המשיכי בדיוק מהנקודה שהפסקת. שיעורים קצרים, הסברים בגובה העיניים, ודוגמאות מהחיים ומהשטח.
   </div>
+</div>
 
   <div class="card">
     <div class="icon-circle">💬</div>
