--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="icon-circle">▶️</div>
   <div class="text-content">
     <strong>
-      <a href="index2.html" style="color: inherit; text-decoration: none;">
+      <a href="videos.html" style="color: inherit; text-decoration: none;">
         להמשיך לצפות בקורס
       </a>
     </strong><br>
