--- a/simulate.html
+++ b/simulate.html
@@ -3,50 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>בחר דמות</title>
+  <title>שיחה לפי דמות</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f4f8;
-      padding: 2rem;
-      text-align: center;
+      background-color: #f4f4f4;
+      padding: 1rem;
+      max-width: 600px;
+      margin: auto;
     }
 
     h1 {
       color: #d94d72;
-      margin-bottom: 2rem;
+      text-align: center;
     }
 
     .options {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      max-width: 300px;
-      margin: auto;
+      margin-bottom: 2rem;
     }
 
     button {
       padding: 1rem;
-      font-size: 1.2rem;
+      font-size: 1rem;
       border: none;
       border-radius: 8px;
       background-color: #fff;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       cursor: pointer;
       transition: background-color 0.3s;
     }
 
     button:hover {
-      background-color: #fce5ec;
+      background-color: #ffe5ec;
     }
 
-    .prompt-box {
-      margin-top: 2rem;
-      padding: 1rem;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    #chat {
       display: none;
+      border-top: 2px solid #ddd;
+      padding-top: 1rem;
+    }
+
+    .chat-box {
+      background-color: white;
+      padding: 1rem;
+      border-radius: 10px;
+      max-height: 300px;
+      overflow-y: auto;
+      margin-bottom: 1rem;
+    }
+
+    .message {
+      margin-bottom: 1rem;
+    }
+
+    .user {
+      text-align: right;
+      color: #333;
+    }
+
+    .bot {
+      text-align: left;
+      color: #d94d72;
+    }
+
+    #inputBox {
+      display: flex;
+      gap: 0.5rem;
+    }
+
+    input {
+      flex: 1;
+      padding: 0.8rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    #sendBtn {
+      background-color: #d94d72;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 0.8rem 1rem;
+      cursor: pointer;
+    }
+
+    #sendBtn:hover {
+      background-color: #c03d60;
     }
   </style>
 </head>
@@ -54,16 +99,19 @@
 
   <h1>עם איזה דמות תרצה לדבר?</h1>
 
-  <div class="options">
+  <div class="options" id="characterOptions">
     <button onclick="selectCharacter('ילד')">ילד</button>
     <button onclick="selectCharacter('נער')">נער</button>
     <button onclick="selectCharacter('מבוגר')">מבוגר</button>
     <button onclick="selectCharacter('קשיש')">קשיש</button>
   </div>
 
-  <div id="promptBox" class="prompt-box">
-    <h3>פרומפט התחלתי:</h3>
-    <p id="promptText"></p>
+  <div id="chat">
+    <div class="chat-box" id="chatBox"></div>
+    <div id="inputBox">
+      <input type="text" id="userInput" placeholder="כתוב הודעה...">
+      <button id="sendBtn" onclick="sendMessage()">שלח</button>
+    </div>
   </div>
 
   <script>
@@ -74,11 +122,48 @@
       "קשיש": "אני בן 75, לעיתים מרגיש לבד. אשמח לשיחה שתאיר לי את היום."
     };
 
+    let currentPrompt = '';
+
+    const sendToOpenAI = async (prompt, userText) => {
+      const res = await fetch('/api/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ prompt, userText })
+      });
+      const data = await res.json();
+      return data.text;
+    };
+
+    function appendMessage(sender, text) {
+      const chatBox = document.getElementById("chatBox");
+      const msg = document.createElement("div");
+      msg.className = "message " + sender;
+      msg.innerText = text;
+      chatBox.appendChild(msg);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
     function selectCharacter(role) {
-      alert("בחרת לדבר עם " + role + "!");
       const prompt = prompts[role];
-      document.getElementById("promptText").textContent = prompt;
-      document.getElementById("promptBox").style.display = "block";
+      currentPrompt = prompt;
+      document.getElementById("characterOptions").style.display = "none";
+      document.getElementById("chat").style.display = "block";
+      appendMessage("user", prompt);
+      sendToOpenAI(currentPrompt, "").then(response => {
+        appendMessage("bot", response);
+      });
+    }
+
+    function sendMessage() {
+      const input = document.getElementById("userInput");
+      const text = input.value.trim();
+      if (!text) return;
+      appendMessage("user", text);
+      input.value = "";
+
+      sendToOpenAI(currentPrompt, text).then(response => {
+        appendMessage("bot", response);
+      });
     }
   </script>
 
