--- a/index.html
+++ b/index.html
@@ -106,13 +106,15 @@
   </div>
 </div>
 
+<a href="simulate.html" style="text-decoration: none; color: inherit;">
   <div class="card">
     <div class="icon-circle">💬</div>
     <div class="text-content">
       <strong>לתרגל סימולציות</strong><br>
-      תרגול שיחות עם דמויות שונות במצבי אמת. תכניי לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
+      תרגול שיחות עם דמויות שונות במצבי אמת. תוכל לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
     </div>
   </div>
+</a>
 
   <div class="card">
     <div class="icon-circle">🤖</div>
