--- a/index.html
+++ b/index.html
@@ -2,132 +2,82 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <title>התחברות עם גוגל</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>מניעת אובדן - סימולציה</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: #f3f4f6;
+      text-align: center;
     }
 
     .header {
       background-color: #f66da0;
       color: white;
       padding: 1rem;
-      text-align: center;
       font-weight: bold;
     }
 
     .sub-header {
       background-color: #d2f3f9;
-      text-align: center;
       padding: 1rem;
       font-size: 1.2rem;
     }
 
-    .question {
-      font-size: 1.5rem;
-      color: #d94d72;
-      margin: 1rem auto;
-      text-align: center;
-      font-weight: bold;
-    }
-
-    .card {
+    .login-box {
       background: white;
+      margin: 2rem auto;
+      padding: 2rem;
       border-radius: 20px;
-      margin: 1rem;
-      padding: 1rem;
+      max-width: 400px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      display: flex;
-      align-items: flex-start;
-      gap: 1rem;
-    }
-
-    .icon {
-      font-size: 2rem;
-      color: #f66da0;
-    }
-
-    .text-content {
-      flex: 1;
-    }
-
-    .button-container {
-      text-align: center;
-      margin: 2rem;
-    }
-
-    .back-button {
-      background-color: #f66da0;
-      border: none;
-      color: white;
-      padding: 0.8rem 2rem;
-      border-radius: 40px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .input-button {
-      background-color: white;
-      color: #f66da0;
-      border: 2px solid #f66da0;
-      border-radius: 40px;
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .icon-circle {
-      background-color: #fddae6;
-      border-radius: 50%;
-      padding: 0.5rem;
-      text-align: center;
-      min-width: 2.5rem;
     }
   </style>
 </head>
 <body>
 
-  <div class="header">מניעת אובדן - סימולציה</div>
-  <div class="sub-header">מה תרצי לעשות היום?</div>
-  <div class="question">?</div>
+  <div class="header">מניעת אובדן - התחברות</div>
+  <div class="sub-header">מתחברים אוטומטית עם Google</div>
 
-  <div class="card">
-  <div class="icon-circle">▶️</div>
-  <div class="text-content">
-    <strong>
-      <a href="videos.html" style="color: inherit; text-decoration: none;">
-        להמשיך לצפות בקורס
-      </a>
-    </strong><br>
-    המשיכי בדיוק מהנקודה שהפסקת. שיעורים קצרים, הסברים בגובה העיניים, ודוגמאות מהחיים ומהשטח.
-  </div>
-</div>
-
-<a href="simulate.html" style="text-decoration: none; color: inherit;">
-  <div class="card">
-    <div class="icon-circle">💬</div>
-    <div class="text-content">
-      <strong>לתרגל סימולציות</strong><br>
-      תרגול שיחות עם דמויות שונות במצבי אמת. תוכל לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
+  <div class="login-box">
+    <div id="g_id_onload"
+         data-client_id="YOUR_GOOGLE_CLIENT_ID"
+         data-callback="handleCredentialResponse"
+         data-auto_prompt="true"
+         data-auto_select="true">
     </div>
-  </div>
-</a>
 
-  <div class="card">
-    <div class="icon-circle">🤖</div>
-    <div class="text-content">
-      <strong>לדבר עם בוט</strong><br>
-      אם יש לך שאלה שתרצי לפרוק או אולי לשאול שאלה? תוכלי לדבר כאן כדי להעלות דילמה ולהיעזר. הוא לא מחליף איש מקצוע – אבל הוא תמיד כאן.
+    <!-- כפתור התחברות נוסף, למקרה שהאוטומטי נכשל -->
+    <div class="g_id_signin"
+         data-type="standard"
+         data-shape="rectangular"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-size="large"
+         data-logo_alignment="right">
     </div>
   </div>
 
-  <div class="button-container">
-    <button class="back-button">⬅️</button>
-    <button class="input-button">שאלות? שאלו אותי</button>
-  </div>
+  <script>
+    function decodeJwtResponse(token) {
+      const base64Url = token.split('.')[1];
+      const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+      return JSON.parse(jsonPayload);
+    }
+
+    function handleCredentialResponse(response) {
+      const data = decodeJwtResponse(response.credential);
+      localStorage.setItem("userName", data.name);
+      localStorage.setItem("userEmail", data.email);
+      localStorage.setItem("userPic", data.picture);
+      window.location.href = "dashboard.html";
+    }
+  </script>
 
 </body>
 </html>
