--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="login-box">
     <div id="g_id_onload"
-         data-client_id="YOUR_GOOGLE_CLIENT_ID"
+         data-client_id="181683898823-avo330lnmj7d79a88q6rs98u7qefq9eo.apps.googleusercontent.com"
          data-callback="handleCredentialResponse"
          data-auto_prompt="true"
          data-auto_select="true">
