--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       localStorage.setItem("userName", data.name);
       localStorage.setItem("userEmail", data.email);
       localStorage.setItem("userPic", data.picture);
-      window.location.href = "dashboard.html";
+      window.location.href = "mainpage.html";
     }
   </script>
 
