--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-  <div class="header">מניעת אובדן - התחברות</div>
+  <div class="header">עזרה ראשונה נפשית -התחברות</div>
   <div class="sub-header">מתחברים אוטומטית עם Google</div>
 
   <div class="login-box">
